--- a/youtube-clone/src/App.css
+++ b/youtube-clone/src/App.css
@@ -1,18 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -28,11 +13,25 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.topbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  background-color: white;
 }
+
+/* .topbar-right {
+  display: flex;
+  align-items: center;
+}
+
+.topbar-center {
+  display: flex;
+  align-items: center;
+  width: 40%;
+  border: 1px solid lightgray;
+} */
