--- a/youtube-clone/src/components/topbar.scss
+++ b/youtube-clone/src/components/topbar.scss
@@ -12,30 +12,41 @@
     }
 
     .logo {
-      height: 25px;
+      height: 23px;
       object-fit: contain;
-      margin-left: 12px;
+      margin-left: 15px;
     }
   }
 
   .topbar-center {
-    width: 40%;
+    width: 45%;
   }
   .topbar-right {
     display: flex;
     align-items: center;
 
     .icons {
-      height: 24px;
-      width: 24px;
+      height: 25px;
+      width: 25px;
     }
 
     .topbar-right_icons {
-      margin-right: 12px;
+      margin-right: 15px;
     }
-    button {
-      border: 1px solid blue;
-      background-color: rgb(21, 21, 130);
+    .topbar_btn {
+      border: 1px solid #065fd4;
+      background-color: white;
+      padding: 5px 9px;
+      border-radius: 0px;
+      text-align: center;
+      font-size: medium;
+      font-weight: 550;
+      color: #065fd4;
+
+      .accnt_icon {
+        height: 30px;
+        width: 30px;
+      }
     }
   }
 }
