--- a/youtube-clone/src/App.scss
+++ b/youtube-clone/src/App.scss
@@ -1,16 +1,9 @@
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+* {
+  margin: 0;
 }
 
-.App-link {
-  color: #61dafb;
+.Main {
+  display: flex;
 }
 
 .topbar {
