--- a/youtube-clone/src/components/sidebar.scss
+++ b/youtube-clone/src/components/sidebar.scss
@@ -1,5 +1,48 @@
 .sidebar {
   flex: 0.2;
   //   width: 20%;
-  background-color: yellow;
+  background-color: white;
+  // border: 1px solid gray;
+  margin-top: 10px;
+}
+
+// font-family: 'Roboto', sans-serif;
+
+// SidebarSection Styling
+
+.sidebarsection {
+  display: flex;
+  width: 100%;
+  padding: 12px 25px;
+  align-items: center;
+
+  &.selected {
+    background-color: gray;
+
+    & .sideBarSection-icon {
+      color: red;
+    }
+
+    & .sideBarSection-title {
+      font-size: large;
+    }
+  }
+  .sideBarSection-icon {
+    margin-right: 15px;
+    height: 25px;
+    width: 25px;
+  }
+}
+
+.sidebarsection:hover {
+  cursor: pointer;
+  background-color: rgb(192, 191, 191);
+
+  & .sideBarSection-icon {
+    color: red;
+  }
+
+  & .sideBarSection-title {
+    font-size: large;
+  }
 }
